--- a/index.htm
+++ b/index.htm
@@ -89,7 +89,7 @@
                                 <path d="M10.6826 7.64689L17.2633 0.162109H15.7044L9.98794 6.6597L5.42557 0.162109H0.162109L7.06282 9.98857L0.162109 17.8365H1.721L7.75389 10.9734L12.5731 17.8365H17.8365M2.28364 1.31235H4.67852L15.7032 16.7429H13.3078" fill="white"></path>
                             </svg>
                         </a>
-                        <a href="https://t.me/elixir_ai" class="social-link" target="_blank">
+                        <a href="https://t.me/solixir" class="social-link" target="_blank">
                             <svg width="18" height="15" viewbox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M16.2886 0.152921C13.957 1.13696 3.95919 5.35678 1.19682 6.50688C-0.655761 7.24356 0.428763 7.93428 0.428763 7.93428C0.428763 7.93428 2.01016 8.48674 3.36586 8.90113C4.72137 9.31552 5.44432 8.85517 5.44432 8.85517L11.8154 4.48107C14.0747 2.9156 13.5325 4.20474 12.9901 4.75739C11.8154 5.95461 9.87243 7.84217 8.24574 9.36167C7.52279 10.0062 7.88417 10.5587 8.20064 10.835C9.37537 11.848 12.5837 13.92 12.7643 14.0581C13.7188 14.7467 15.5964 15.7379 15.882 13.6437L17.0115 6.41496C17.3732 3.97476 17.7345 1.71858 17.7797 1.07401C17.9153 -0.491647 16.2886 0.152921 16.2886 0.152921Z" fill="white"></path>
                             </svg>
@@ -1268,17 +1268,17 @@
                 <div class="sc-footer__col">
                     <div class="sc-footer__title">Social</div>
                     <div class="sc-footer__btns">
-                        <a href="https://x.com/elixir_sol" class="social-link" target="_blank">
+                        <a href="https://x.com/solixir" class="social-link" target="_blank">
                             <svg width="18" height="18" viewbox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M10.6826 7.64689L17.2633 0.162109H15.7044L9.98794 6.6597L5.42557 0.162109H0.162109L7.06282 9.98857L0.162109 17.8365H1.721L7.75389 10.9734L12.5731 17.8365H17.8365M2.28364 1.31235H4.67852L15.7032 16.7429H13.3078" fill="white"></path>
                             </svg>
                         </a>
-                        <a href="https://t.me/elixir_ai" class="social-link" target="_blank">
+                        <a href="https://t.me/solixir" class="social-link" target="_blank">
                             <svg width="18" height="15" viewbox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M16.2886 0.152921C13.957 1.13696 3.95919 5.35678 1.19682 6.50688C-0.655761 7.24356 0.428763 7.93428 0.428763 7.93428C0.428763 7.93428 2.01016 8.48674 3.36586 8.90113C4.72137 9.31552 5.44432 8.85517 5.44432 8.85517L11.8154 4.48107C14.0747 2.9156 13.5325 4.20474 12.9901 4.75739C11.8154 5.95461 9.87243 7.84217 8.24574 9.36167C7.52279 10.0062 7.88417 10.5587 8.20064 10.835C9.37537 11.848 12.5837 13.92 12.7643 14.0581C13.7188 14.7467 15.5964 15.7379 15.882 13.6437L17.0115 6.41496C17.3732 3.97476 17.7345 1.71858 17.7797 1.07401C17.9153 -0.491647 16.2886 0.152921 16.2886 0.152921Z" fill="white"></path>
                             </svg>
                         </a>
-                        <a href="https://docs.elixir-ai.pro/" class="social-link" target="_blank">
+                        <a href="https://solixir-docs.vercel.app/" class="social-link" target="_blank">
                             <svg width="21" height="15" viewbox="0 0 21 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M9.45176 12.5048C9.79045 12.5048 10.0661 12.7781 10.0661 13.1136C10.0661 13.4493 9.79045 13.7224 9.45176 13.7224C9.11306 13.7224 8.83767 13.449 8.83767 13.1136C8.83736 12.7781 9.11306 12.5048 9.45176 12.5048ZM19.0978 8.73347C18.759 8.73347 18.4833 8.46015 18.4833 8.12468C18.4833 7.78892 18.759 7.5156 19.0978 7.5156C19.4364 7.5156 19.7118 7.78892 19.7118 8.12468C19.7121 8.46015 19.4364 8.73347 19.0978 8.73347ZM19.0978 6.23886C18.0489 6.23886 17.1955 7.08467 17.1955 8.12468C17.1955 8.32721 17.2294 8.52885 17.2963 8.72484L11.0126 12.0409C10.6556 11.5308 10.0769 11.2287 9.45116 11.2287C8.72608 11.2287 8.0652 11.64 7.74539 12.2826L2.10012 9.33213C1.50374 9.02135 1.05736 8.04735 1.10475 7.16111C1.12935 6.69864 1.29044 6.33998 1.53583 6.20138C1.69153 6.11366 1.87903 6.12138 2.07792 6.22458L2.11572 6.24422C3.6112 7.02549 8.50679 9.58166 8.71288 9.67652C9.03087 9.82224 9.20787 9.88143 9.74965 9.62685L19.869 4.40954C20.0173 4.35393 20.1904 4.21326 20.1904 3.99912C20.1904 3.70232 19.8799 3.58545 19.8799 3.58545C19.3045 3.31184 18.4198 2.90112 17.5567 2.50082C15.7123 1.6446 13.622 0.674478 12.704 0.197744C11.9114 -0.213562 11.2736 0.133208 11.1596 0.203395L10.9385 0.311948C6.80702 2.33754 1.27784 5.05223 0.962849 5.24196C0.399163 5.58189 0.0499733 6.25938 0.00497454 7.10043C-0.065524 8.43368 0.620562 9.82344 1.60125 10.3335L7.5705 13.3854C7.70489 14.3088 8.50677 15 9.45146 15C10.4906 15 11.3378 14.1697 11.3534 13.143L17.9277 9.61079C18.261 9.86894 18.6744 10.0108 19.0978 10.0108C20.1465 10.0108 21 9.16469 21 8.12498C21 7.08527 20.1465 6.23886 19.0978 6.23886Z" fill="white"></path>
                             </svg>
@@ -1320,9 +1320,9 @@
                     <div class="footer-menu__col">
                         <div class="sc-footer__title">Docs</div>
                         <ul class="footer-menu__ul">
-                            <li class="footer-menu__li"><a href="https://docs.elixir-ai.pro/" target="_blank">Introducing</a></li>
-                            <li class="footer-menu__li"><a href="https://docs.elixir-ai.pro/" target="_blank">Whitepaper</a></li>
-                            <li class="footer-menu__li"><a href="https://docs.elixir-ai.pro/3d-alchemy-platform/privacy-policy" target="_blank">Privacy policy</a></li>
+                            <li class="footer-menu__li"><a href="https://solixir-docs.vercel.app/" target="_blank">Introducing</a></li>
+                            <li class="footer-menu__li"><a href="https://solixir-docs.vercel.app/" target="_blank">Whitepaper</a></li>
+                            <li class="footer-menu__li"><a href="https://solixir-docs.vercel.app/3d-alchemy-platform/privacy-policy" target="_blank">Privacy policy</a></li>
                         </ul>
                     </div>
                 </div>
