hide buy dex btn

--- a/index.htm
+++ b/index.htm
@@ -96,7 +96,7 @@
                     <h2 class="sc-main__title sc-title">Token</h2>
                     <p class="sc-main__text">Unlock unlimited access to all the features of the dApp with the <a href="#">$ELXAI</a> token</p>
                     <button class="contract-btn js-copy" data-copy="jriiULJQwgqdU48hTv1eKqK4ipCiCWBnP9CZbonpump">jriiULJQwgqdU48hTv1eKqK4ipCiCWBnP9CZbonpump</button>
-                    <div class="sc-main__btns">
+                    <!-- <div class="sc-main__btns">
                         <a href="https://jup.ag/swap/SOL-jriiULJQwgqdU48hTv1eKqK4ipCiCWBnP9CZbonpump" class="ui-btn" target="_blank">Buy on DEX</a>
                         <a href="https://dexscreener.com/solana/3krhkke5c33axahjxtzusu5hksqx2xvgjqdg3xa4cbqw" class="social-link" target="_blank">
                             <svg width="18" height="23" viewbox="0 0 18 23" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -117,7 +117,7 @@
                                 <path d="M4.14031 10.0746H13.1478C13.3578 10.0746 13.5303 9.90207 13.5303 9.69207C13.5303 9.48207 13.3578 9.30957 13.1478 9.30957H4.14031C3.93031 9.30957 3.75781 9.48207 3.75781 9.69207C3.76531 9.90207 3.93031 10.0746 4.14031 10.0746Z" fill="white"></path>
                             </svg>
                         </a>
-                    </div>
+                    </div> -->
                 </div>
                 <img class="sc-main__img" src="img/main/bottle.png" alt="">
                 
